# mlops-project

./: .gitignore  README.md  requirements.txt
.dvc/: config
insurance_ml_team_9/: Makefile  README.md  pyproject.toml
insurance_ml_team_9/docs/: mkdocs.yml
insurance_ml_team_9/docs/docs/: index.md
insurance_ml_team_9/models/: train_model.py
insurance_ml_team_9/notebooks/: Fase 1_MPDK.ipynb
insurance_ml_team_9/notebooks/mlruns/0/: meta.yaml
insurance_ml_team_9/notebooks/mlruns/507001819128610426/: meta.yaml
insurance_ml_team_9/notebooks/mlruns/507001819128610426/0dcc529466e64927883e4954a66b8522/: meta.yaml
insurance_ml_team_9/notebooks/mlruns/507001819128610426/1f3dc4dcee354aec80bbec8cf061329a/: meta.yaml
insurance_ml_team_9/notebooks/mlruns/507001819128610426/29967ca7879f4db2b81a3f40dbb75f32/: meta.yaml
insurance_ml_team_9/notebooks/mlruns/507001819128610426/395cfa91eb8e4664a152c9bf02831e99/: meta.yaml
insurance_ml_team_9/notebooks/mlruns/507001819128610426/39ee72cee40f4fc4aa8cdc5bcecec333/: meta.yaml
insurance_ml_team_9/notebooks/mlruns/507001819128610426/5f3be72a3a674e16be59bdd88866c985/: meta.yaml
insurance_ml_team_9/notebooks/mlruns/507001819128610426/80df620d555b414fbb7efdb7eac88a15/: meta.yaml
insurance_ml_team_9/notebooks/mlruns/507001819128610426/84ece5722eb841eeb8ba23034579c154/: meta.yaml
insurance_ml_team_9/notebooks/mlruns/507001819128610426/879aa7370fbc4b1fa2fc9993f36db285/: meta.yaml
insurance_ml_team_9/notebooks/mlruns/507001819128610426/92d986e3f91144b3a7fbe59eb76e7de0/: meta.yaml
notebooks/: 3.2_MPDK_refactoring.ipynb  (+6 more)
(+90 files in other folders)
